# BKR_System-Software-for-Proactive-Windows-System-State-Analysis

./: .gitignore  README.md
SPZ_Merged/: SPZ_Merged.sln
SPZ_Merged/SPZ_Merged/: SPZ_Merged.vcxproj  SPZ_Merged.vcxproj.filters
SPZ_Merged/SPZ_Merged/include/: GlobalData.h
SPZ_Merged/SPZ_Merged/src/: event_loggers.cpp  gui_utils.cpp  logging_utils.cpp  main.cpp  monitor_processes.cpp  monitor_system.cpp
SPZ_Qt/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
SPZ_Qt/logs/ProcessLogs/: Log_20260419_141915.csv  Log_20260419_142631.csv
SPZ_Qt/src/: alert_manager.cpp  alert_manager.h  anomaly_dialogs.cpp  anomaly_dialogs.h  anomaly_engine.cpp  anomaly_engine.h  anomaly_types.h  backend.cpp  backend.h  baseline_tracker.cpp  baseline_tracker.h  crash_monitor.cpp  crash_monitor.h  database.cpp  database.h  hardware_monitor.cpp  hardware_monitor.h  main.cpp  mainwindow.cpp  mainwindow.h  process_info.h  process_scanner.cpp  process_scanner.h  recommend_engine.cpp  recommend_engine.h  settings_dialog.cpp  settings_dialog.h  settings_manager.cpp  settings_manager.h
